# AI-2048

./: CMakeLists.txt  README.md  build_and_run.sh
data/: expectimax_data.json  expmax_2_tt.json  expmax_3_tt.json  expmax_4_tt.json  expmax_5_tt.json  expmax_6_tt.json  mcts_1000.json  mcts_1500.json  mcts_2000.json  mcts_2500.json  mcts_500.json  mcts_data.json  mctse_1000.json  mctse_1000_time_limit.json  mctse_1500.json  mctse_1500_time_limit.json  mctse_2000.json  mctse_2000_time_limit.json  mctse_2500.json  mctse_2500_time_limit.json  mctse_500.json  mctse_500_time_limit.json
src/: main  main.cpp
src/algorithms/: expectimax.cpp  expectimax.hpp  heuristics.cpp  heuristics.hpp  mcts.cpp  mcts.hpp  mctse.cpp  mctse.hpp
src/tests/: transp_table  transp_table.cpp
src/utilities/: utility.hpp
tests/: board_test.cpp
